--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Today's gitHub commit</h1>
+    <div class="js-clock">
+      <h1>00:00</h1>
+    </div>
   </body>
-  <script src="popup.js"></script>
 </html>
