--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     />
   </head>
   <body>
+    <!-- 기능1. 시간 출력 -->
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
+    <!-- 기능2. D-day -->
+    <div class="js-Dday"></div>
+    <script src="clock.js"></script>
   </body>
 </html>
