--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
   </head>
   <body>
+    <!-- 전체적인 디자인 먼저 확보!!! -->
     <!-- 기능1. 시간 출력 -->
     <div class="js-clock">
       <h1>00:00</h1>
@@ -16,5 +17,6 @@
     <!-- 기능2. D-day -->
     <div class="js-Dday"></div>
     <script src="clock.js"></script>
+    <script src="dDay.js"></script>
   </body>
 </html>
