Adding D-day..(using localStorage)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <h1>00:00</h1>
     </div>
     <!-- 기능2. D-day -->
-    <div class="js-Dday"></div>
+    <div class="js-Dday">
+      <label for="start">시작일</label>
+      <input type="date" />
+      <button>입력하기</button>
+      <div></div>
+    </div>
     <script src="clock.js"></script>
     <script src="dDay.js"></script>
   </body>
