studying canvas -> make analog image clock

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <!-- 전체적인 디자인 먼저 확보!!! -->
     <!-- 기능1. 시간 출력 (디지털 시계, 그림 시계) -->
     <div id="div1">
-      <canvas id="js-imgClock" width="500px" height="300px">
-        <div class="js-clock">
-          <h1>00:00</h1>
-        </div>
-      </canvas>
+      <canvas id="js-imgClock" width="500px" height="300px"></canvas>
+      <div class="js-clock">
+        <h1>00:00</h1>
+      </div>
     </div>
     <!-- 기능2. D-day -->
     <div id="div2">
