make circle movement and center the clock

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     />
   </head>
   <body>
-    <!-- 전체적인 디자인 먼저 확보!!! -->
     <!-- 기능1. 시간 출력 (디지털 시계, 그림 시계) -->
     <div id="div1">
-      <canvas id="js-imgClock" width="500px" height="300px"></canvas>
+      <canvas id="js-imgClock" width="650px" height="400px"></canvas>
       <div class="js-clock">
         <h1>00:00</h1>
       </div>
@@ -26,7 +25,7 @@
         <div></div>
       </div>
     </div>
-    <!-- 반원의 그림 시계 구현하기 -->
+    <div id="div3"></div>
     <script src="clock.js"></script>
     <script src="dDay.js"></script>
     <script src="imgClock.js"></script>
