--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <!-- 기능1. 시간 출력 (디지털 시계, 그림 시계) -->
-    <div id="div1">
-      <canvas id="js-imgClock" width="650px" height="400px"></canvas>
+    <div id="div-clock">
+      <canvas id="js-imgClock" width="700px" height="450px"></canvas>
       <div class="js-clock">
         <h1>00:00</h1>
       </div>
     </div>
     <!-- 기능2. D-day -->
-    <div id="div2">
+    <div id="div-Dday">
       <div class="js-Dday">
         <label for="start">시작일</label>
         <input type="date" />
@@ -25,7 +25,13 @@
         <div></div>
       </div>
     </div>
-    <div id="div3"></div>
+    <!-- 기능3. Todo-List -->
+    <div id="div-toDo">
+      <form class="js-toDoForm">
+        <input id="myList" type="text" placeholder="what's your plan?" />
+      </form>
+      <ul class="js-toDoList"></ul>
+    </div>
     <script src="clock.js"></script>
     <script src="dDay.js"></script>
     <script src="imgClock.js"></script>
