--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
   </head>
   <body>
-    <!-- 기능1. 시간 출력 (디지털 시계, 그림 시계) -->
+    <!-- 기능1. clock -->
     <div id="div-clock">
       <canvas id="js-imgClock" width="700px" height="450px"></canvas>
       <div class="js-clock">
