--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>my doodle tab</title>
+    <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" /> -->
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- 기능1. clock -->
